fix input value increase/decrease bug and remove excess whitespace in product detail page

--- a/agent/static/agent/css/custom.css
+++ b/agent/static/agent/css/custom.css
@@ -3,7 +3,7 @@
 }
 
 .product-image {
-    height: 300px;
+    height: 400px;
 }
 
 .product-image img {
